# naomi-db

./: .env  Cargo.toml  README.md
src/: main.rs
src/handlers/: database.rs  health.rs  mod.rs
src/models/: database.rs  general.rs  health.rs  mod.rs
src/utils/: ollama.rs
