[package]
name = "naomidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", features = ["openssl"]}
actix-cors = "0.7"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
ollama-rs = "0.3.2"
milvus-sdk-rust = "0.1.0"
md5 = "0.7"
qdrant-client = "1.15.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6", features = ["v5"] }
anyhow = "1.0"
